# Q_Fuel_test

./: CMakeLists.txt  Gauge_view_ui.qml  Plot_view_ui.qml  README.md  Res.qrc  Tao_custom.qrc  Taotitle_ui.qml  content_ui.qml  main.cpp  main.qml  qml.qrc
TaoQuick/Qml/: CusConfig.qml
Tao_custom_Qml/instrument/: S5WDial.qml
thridtool/QCustomPlot/qcustomplot/: axistag.cpp
thridtool/QCustomPlot/qcustomplot/Anvedi/qml-lib/: qmlLegend.cpp  qmlPlotPaintedItem.cpp  qmlPlotPaintedItem.h
thridtool/QCustomPlot/qcustomplotapi/: qcustom_api.cpp
